--- a/style.css
+++ b/style.css
@@ -39,20 +39,20 @@ button {
 
 .selection {
     font-size: 100px;
-    transition: 130ms;
-    margin: 5%;  
+    transition: 130ms;  
+    margin: 20px;
+
 }
 
 
 .selection:hover {
     transform: scale(1.1);
-    margin: 5%;  
 }
 
 .displayWinner {
     outline: solid black;
-    background: rgba(0, 0, 0, 0.3)
-
+    background: rgba(0, 0, 0, 0.3);
+    padding: 20px;
 }
 
 .title {
@@ -62,7 +62,8 @@ button {
 
 .points{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 30px;
 }
 
 
