--- a/style.css
+++ b/style.css
@@ -15,10 +15,9 @@ body {
     font-family:  Arial, Helvetica, sans-serif;
 }
 
-button {
-    border-radius: 8px;
-}
 
+
+/* Alien */
 .alien{
     display: flex;
     justify-content: center;
@@ -32,6 +31,64 @@ button {
     border: solid black;
     }    
 
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    margin-top: 20px;
+    margin-left: auto;
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+      
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    background: radial-gradient(#ffab28, #9198e5);
+    padding-top: 30px;
+    border-radius: 50%;
+    color: black;
+    border: solid black;
+}
+
+
+/* Style the back side */
+.flip-card-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+/* RPS buttons */
+button {
+    border-radius: 8px;
+    border: solid;
+    width: 150px;
+    height: 150px;
+}
+
 .main {
     display: flex;
     justify-content: center;
@@ -44,11 +101,25 @@ button {
 
 }
 
+#rock {
+    background-image:url('./img/rock.png');
+    background-size:cover;
+}
 
+#paper {
+    background-image:url('./img/paper.png');
+    background-size:cover;
+}
+
+#scissors {
+    background-image:url('./img/scissors.png');
+    background-size: cover;
+}
 .selection:hover {
     transform: scale(1.1);
 }
 
+/* Scoreboard */
 .displayWinner {
     outline: solid black;
     background: rgba(0, 0, 0, 0.3);
