--- a/style.css
+++ b/style.css
@@ -16,7 +16,17 @@ body {
 }
 
 
+.rivals {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 0 10%;
+}
 
+.spaceship img{
+    width: 200px;
+    height: auto;
+}
 /* Alien */
 .alien{
     display: flex;
@@ -24,7 +34,6 @@ body {
 
 }
 .alien img {
-    padding: 3%;
     width: 100px; 
     height: auto;
     background: radial-gradient(#e66465, #9198e5);    border-radius: 30%;
@@ -33,8 +42,6 @@ body {
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
-    margin-top: 20px;
-    margin-left: auto;
     background-color: transparent;
     width: 300px;
     height: 200px;
@@ -67,7 +74,7 @@ body {
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
     background: radial-gradient(#ffab28, #9198e5);
-    padding-top: 30px;
+    padding-top: 20px;
     border-radius: 50%;
     color: black;
     border: solid black;
@@ -78,6 +85,9 @@ body {
 .flip-card-back {
     background-color: dodgerblue;
     color: white;
+    border: solid black;
+    border-radius: 50%;
+    padding-top: 20px;
     transform: rotateY(180deg);
 }
 
